# tools/kotohiro.openapi.yaml
@@ -33,7 +33,7 @@ paths:
             type: string
       requestBody:
         content:
-          application/x-www-form-urlencoded:
+          multipart/form-data:
             schema:
               type: object
               properties:
@@ -287,11 +287,13 @@ paths:
                   example: ''
                 referenceURL:
                   type: string
+                  format: url
                   example: ''
                   nullable: true
                 picture:
                   type: string
                   format: binary
+                  description: 参考画像。4MiBまで
                   example: ''
               required:
                 - opinionContent
@@ -629,7 +631,7 @@ paths:
       parameters: []
       requestBody:
         content:
-          application/x-www-form-urlencoded:
+          multipart/form-data:
             schema:
               type: object
               properties:
@@ -651,6 +653,16 @@ paths:
                   type: number
                   description: 経度
                   example: 0
+                  nullable: true
+                city:
+                  type: string
+                  description: 市区町村
+                  example: ''
+                  nullable: true
+                prefecture:
+                  type: string
+                  description: 都道府県
+                  example: ''
                   nullable: true
               required:
                 - theme
@@ -682,6 +694,14 @@ paths:
                         $ref: '#/components/schemas/location'
                       - type: 'null'
                     description: 位置情報
+                  city:
+                    type: string
+                    description: 市区町村
+                    nullable: true
+                  prefecture:
+                    type: string
+                    description: 都道府県
+                    nullable: true
                 required:
                   - id
                   - theme
@@ -753,7 +773,7 @@ paths:
                   description: 性別
                   example: ''
                   nullable: true
-                municipality:
+                city:
                   type: string
                   description: 市区町村
                   example: ''
@@ -901,7 +921,15 @@ paths:
       operationId: registerUser
       tags:
         - user
-      parameters: []
+      parameters:
+        - name: SessionId
+          in: cookie
+          description: ''
+          required: false
+          example: >-
+            eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJhdWQiOiJrb3RvaGlyby5jb20iLCJkaXNwbGF5SWQiOm51bGwsImRpc3BsYXlOYW1lIjpudWxsLCJleHAiOjE3Mjg4OTM0NzAsImlhdCI6MTcyODgwNzA3MCwiaWNvblVSTCI6bnVsbCwiaXNWZXJpZnkiOmZhbHNlLCJpc3MiOiJrb3RvaGlyby5jb20iLCJqdGkiOiIwMTkyODRlZS02OWQwLTc3MWUtOTZjZi0xMDcyMjdmNDM2ODYiLCJzdWIiOiIwMTkyODRlYy01YzJhLTc1MzUtOTg2Yi03NTU3NWVhZTg3MjgifQ.APv33CyxLOlu4cuukgdqLEIsUq0CM7dMg66A6tutyuw
+          schema:
+            type: string
       requestBody:
         content:
           multipart/form-data:
@@ -911,11 +939,11 @@ paths:
                 displayName:
                   type: string
                   description: ユーザー名。日本語なども設定可能。
-                  example: ''
+                  example: hogesge
                 displayID:
                   type: string
                   description: ユーザーID。プロフィールのパスなどで使用される。DBのIDとは別。
-                  example: ''
+                  example: suge-
                 icon:
                   format: binary
                   type: string
@@ -942,7 +970,7 @@ paths:
                   description: 都道府県
                   example: ''
                   type: string
-                municipality:
+                city:
                   type: string
                   description: 市区町村
                   example: ''
@@ -1043,6 +1071,133 @@ paths:
       security:
         - apikey-header-SessionId: []
       x-ogen-operation-group: user
+  /opinions/histories:
+    get:
+      summary: 今までに投稿した異見
+      deprecated: false
+      description: ''
+      operationId: opinionsHistory
+      tags:
+        - user
+      parameters:
+        - name: sort
+          in: query
+          description: ソートきー
+          required: false
+          schema:
+            type: string
+            enum:
+              - latest
+              - mostReply
+              - oldest
+            x-apidog:
+              enumDescriptions:
+                latest: 最新
+                mostReply: もっともリプライされた
+                oldest: 最古
+            nullable: true
+      responses:
+        '200':
+          description: ''
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  opinions:
+                    type: array
+                    items:
+                      type: object
+                      properties:
+                        user: *ref_1
+                        opinion: *ref_0
+                        replyCount:
+                          type: integer
+                      required:
+                        - user
+                        - opinion
+                        - replyCount
+                required:
+                  - opinions
+          headers: {}
+        '400':
+          description: ''
+          content:
+            application/json:
+              schema:
+                type: object
+                properties: {}
+              examples:
+                '1':
+                  summary: internal
+                  value:
+                    code: GENERAL-000
+                    message: INTERNAL SERVER ERROR.
+          headers: {}
+        '500':
+          description: ''
+          content:
+            application/json:
+              schema:
+                type: object
+                properties: {}
+              examples:
+                '1':
+                  summary: internal
+                  value:
+                    code: GENERAL-000
+                    message: INTERNAL SERVER ERROR.
+          headers: {}
+      security: []
+      x-ogen-operation-group: User
+  /sessions/histories:
+    get:
+      summary: リアクション済みのセッション一覧
+      deprecated: false
+      description: ''
+      operationId: sessionsHistory
+      tags:
+        - user
+      parameters: []
+      responses:
+        '200':
+          description: ''
+          content:
+            application/json:
+              schema:
+                type: object
+                properties: {}
+          headers: {}
+        '400':
+          description: ''
+          content:
+            application/json:
+              schema:
+                type: object
+                properties: {}
+              examples:
+                '1':
+                  summary: internal
+                  value:
+                    code: GENERAL-000
+                    message: INTERNAL SERVER ERROR.
+          headers: {}
+        '500':
+          description: ''
+          content:
+            application/json:
+              schema:
+                type: object
+                properties: {}
+              examples:
+                '1':
+                  summary: internal
+                  value:
+                    code: GENERAL-000
+                    message: INTERNAL SERVER ERROR.
+          headers: {}
+      security: []
+      x-ogen-operation-group: User
   /auth/token/info:
     get:
       summary: JWTの内容を返してくれる
@@ -1232,6 +1387,14 @@ components:
             - *ref_4
             - type: 'null'
           description: 位置情報
+        city:
+          type: string
+          description: 市区町村
+          nullable: true
+        prefecture:
+          type: string
+          description: 都道府県
+          nullable: true
       required:
         - id
         - theme
@@ -1322,17 +1485,9 @@ components:
         longitude:
           type: number
           description: 経度
-        prefecture:
-          type: string
-          description: 都道府県
-        city:
-          type: string
-          description: 市区町村
       required:
         - latitude
         - longitude
-        - prefecture
-        - city
     tokenClaim:
       type: object
       properties:
@@ -1402,7 +1557,7 @@ components:
           type: string
           title: 性別
           description: 性別
-        municipality:
+        city:
           type: string
           title: 市区町村
           description: 市区町村
